# glossy

./: Makefile.am  TODO  autogen.sh  configure.ac  glossy.pc.in
src/: Makefile.am  glossy-common.hh  glossy-sl-metatypes-ctors.py  glossy-sl-metatypes-mat.hh  glossy-sl-metatypes-ops.hh  glossy-sl-metatypes-swizzle.py  glossy-sl-metatypes-vec.hh  glossy-sl-metatypes.hh  glossy-sl.hh  swizzle.py  test.cc
